# actix_demo

./: Cargo.toml  Makefile
migrations/: 20250310112318_init.up.sql
src/: main.rs
src/models/: game.rs
src/routes/: config.rs  game.rs  health_route.rs
