[package]
name = "actix_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
argon2 = "0.5.3"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
jsonwebtoken = "9.3.1"
rand_core = { version = "0.9.3", features = ["std"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
